// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ CodeCoverageTableLoading ]] renders code coverage table in loading state with all prop options: {"isWidget":false} 1`] = `
"<section class=\\"overflow-x-auto leading-normal rounded-md border border-slate-400\\">
  <table class=\\"cursor w-full table-fixed\\">
    <thead class=\\"border-b border-slate-400\\">
      <tr class=\\"text-xs font-semibold uppercase text-vanilla-400\\">
        <th class=\\"w-48 py-2.5 text-left pl-4 sm:w-auto\\">
          Repository
        </th>
        <th class=\\"text-right w-40 pr-2\\">
          <zbutton-stub button-type=\\"ghost\\" size=\\"x-small\\" color=\\"vanilla-400\\" disabled=\\"true\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Line Coverage</span>
              <zicon-stub icon=\\"arrow-up-down\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
        <th class=\\"text-right w-48 pr-2\\">
          <zbutton-stub button-type=\\"ghost\\" size=\\"x-small\\" color=\\"vanilla-400\\" disabled=\\"true\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Branch Coverage</span>
              <zicon-stub icon=\\"arrow-up-down\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-200\\">
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
    </tbody>
  </table>
</section>"
`;

exports[`[[ CodeCoverageTableLoading ]] renders code coverage table in loading state with all prop options: {"isWidget":true} 1`] = `
"<section class=\\"overflow-x-auto leading-normal max-h-92 overflow-y-auto\\">
  <table class=\\"cursor w-full table-fixed\\">
    <thead class=\\"border-b border-slate-400\\">
      <tr class=\\"text-xs font-semibold uppercase text-vanilla-400\\">
        <th class=\\"w-48 py-2.5 text-left pl-5\\">
          Repository
        </th>
        <th class=\\"text-right w-28\\">
          <zbutton-stub button-type=\\"ghost\\" size=\\"x-small\\" color=\\"vanilla-400\\" disabled=\\"true\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Line</span>
              <zicon-stub icon=\\"arrow-up-down\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
        <th class=\\"text-right w-28 pr-5\\">
          <zbutton-stub button-type=\\"ghost\\" size=\\"x-small\\" color=\\"vanilla-400\\" disabled=\\"true\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Branch</span>
              <zicon-stub icon=\\"arrow-up-down\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-200\\">
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"mb-px h-5 w-48 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-16 pr-4 text-right\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"mb-px h-5 animate-pulse rounded-md bg-ink-300\\"></div>
        </td>
      </tr>
    </tbody>
  </table>
</section>"
`;
